tdengine/tdengine-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tdengine
  namespace: tdengine
  labels:
    app: tdengine
spec:
  selector:
    matchLabels:
      app: tdengine
  template:
    metadata:
      labels:
        app: tdengine
    spec:
      containers:
        - image: tdengine/tdengine:latest
          name: tdengine
          ports:
            - containerPort: 6030
              name: rest-api            
            - containerPort: 6041
              name: client            
            - containerPort: 6060
              name: client
          volumeMounts:
            - name: tdengine-persistent-storage
              mountPath: /var/lib/taos
            - name: tdengine-config
              mountPath: /etc/taos
      volumes:
        - name: tdengine-persistent-storage
          persistentVolumeClaim:
            claimName: tdengine-pvc
        - name: tdengine-config
          configMap:
            name: tdengine-config
