tdengine/tdengine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdengine
  namespace: tdengine
  labels:
    app: tdengine
spec:
  ports:
    - name: rest
      port: 6030
      protocol: TCP
      targetPort: 6030
    - name: client
      port: 6041
      protocol: TCP
      targetPort: 6041
    - name: mgmt
      port: 6060
      protocol: TCP
      targetPort: 6060
  selector:
    app: tdengine
  type: ClusterIP
